-
Bug
-
Resolution: Done
-
P1: Critical
-
Qt Creator 3.3.0
-
None
-
Qt Creator 3.3.0, Win 7 64bit, cmake, Visual C++ 2013
Steps to reproduce:
1. Open medium sized project
2. Wait for the asynchronous loading to finish
3. Open a project header file
4. Open <list> system header file
5. Scroll to end
6. Close <list>
7. Qt Creator freezes
I've attached screenshots with Qt Creator 3.3.0 and with a git debug build.
- replaces
-
QTCREATORBUG-13705 Qt Creator hangs when parsing std header <sstream> of MSVC 2013
-
- Closed
-
For Gerrit Dashboard: QTCREATORBUG-13703 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
104282,3 | C++: Check for cycled parents | 3.3 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |